--- a/src/app/header-bar/header-bar.component.html
+++ b/src/app/header-bar/header-bar.component.html
@@ -1,1 +1,18 @@
-<h1>HEADER BAR!!!!</h1>
+<div class="row">
+    <div class="col-md-3">
+        <h2>Parents to Parents</h2>
+    </div>
+    <div class="col-md-4 col-md-offset-5">
+        <ul class="nav-ul">
+            <li>
+                <a href="#">Mental/Brain Disorders</a>
+            </li>
+            <li>
+                <a href="#">Therapies</a>
+            </li>
+            <li>
+                <a href="#">About Us</a>
+            </li>
+        </ul>
+    </div>
+</div>
